// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package types;

import "validator_info.proto";

// Protobuf definition for the Rust struct ValidatorSet.
// Serialized by LCS
message ValidatorSet { bytes bytes = 1; }
